@@ -235,10 +235,14 @@ table.calendar-legend tr.even .stripe {
   border:none;
   border-top:1px #333 dotted;
   padding-top:.25em;
-  padding-right:10px;
+  width:1%;
+}
+.calendar-calendar td.calendar-agenda-no-hours {
+  min-width:1%;
 }
 .calendar-calendar td.calendar-agenda-hour .calendar-hour {
-  font-size:2em;
+  font-size:1.2em;
+  font-weight:bold;
 }
 .calendar-calendar td.calendar-agenda-hour .calendar-ampm {
   font-size:1em;
