@@ -6,6 +6,7 @@ See documentation at http://drupal.org/node/262064.
 Version 2.0 dev
 =================
 
+- #365113 Remove agenda hour column when not grouping by hour.
 - #357019 Add method to hide all items and show only count or 'more' link.
 - #350229 Make sure Calendar doesn't get updated before Views.
 - #341841 Add 'has-events' and 'has-no-events' classes for easier themeing.
